# strands-cli-agent

./: .gitignore  .prompt.example  README.md  mcp.json.example  pyproject.toml
src/strands_cli_agent/: __init__.py  cli.py  mcp_loader.py  task_manager.py
src/strands_cli_agent/handlers/: __init__.py  callback_handler.py  notification_handler.py
tests/: test_callback_handler.py  test_cli_completion.py  test_mcp_loader.py  test_task_manager.py
tools/: __init__.py
